[metadata]
name = funkiiu
big_number_version = 15
summary = Kolla OpenStack Deployment
description_file = README.md
author = m986883511
python_requires = >=3.8
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[entry_points]
console_scripts =
    funkiiu = funkiiu:main
